# p2p-rendering-computation

./: .default.nix.swp  .gitignore  .gitmodules  .goreleaser.yml  CITATION.cff  CNAME  CONTRIBUTE.md  CONTRIBUTE.md.org  Makefile  README  README.md  README.md.org  README.md.tex  README.org  _config.yml  build-bindings.sh  build-haskell.sh  build-python-package.sh  cert.pem  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  index.html  index.org  index.org~  install-binary.bat  install-binary.sh  install.bat  install.sh  key.pem  main.go  main.md  main.md.org  main.tex  p2prc.PublicKeyBareMetal  requirements.txt  shell.nix  style.css  (+2 more)
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: pages.yml
1_front_matter/: contents.tex  preamble.tex  titlepage.tex
2_main_body/: background.tex  conclusion.tex  development.tex  evaluation.tex  introduction.tex
2_main_body/code/: gcd.py
3_back_matter/: appendices.tex  references.bib  references.tex
3_back_matter/appendices/: screen.tex  uml.tex
Bindings/: Client.go  docs.md
Bindings/Erlang/: p2prc.erl
Bindings/Haskell/: .gen_docs.sh  .mhsi  README.md  cabal.project  flake.nix  gen_docs.sh  p2prc.cabal  project.nix
Bindings/Haskell/lib/: API.hs  CLI.hs  Engine.hs  Error.hs  JSON.hs  P2PRC.hs
Bindings/Haskell/src/: Main.hs
Bindings/python/: library.py  p2prc.py  requirements.txt  test.py
Docs/: .gitignore  Abstractions.md  Abstractions.md.org  Bindings.md  CliImplementation.md  CliImplementation.org  Client.md  ClientArchitecture.md  ClientArchitecture.md.org  ClientImplementation.md  ClientImplementation.md.org  ClientImplementation.org  ConfigImplementation.md  DomainNameMappingsImplementation.md.org  GenerateImplementation.md  Implementation.md  Implementation.md.org  Installation.md  Installation.md.org  Introduction.md  Introduction.md.org  NAT-Traveral.md  P2P-testing.md  P2P-testing.md.org  P2P.md  P2PImplementation.md  P2PImplementation.org  PluginImplementation.md  PluginImplementation.md.org  Problems.md  README.md  README.md.org  ServerImplementation.md  android-setup.txt  docs.odt  docs.org  index.html  index.org  kill-docs.sh  run-docs.sh  (+2 more)
Docs/DocsDeprecated/: Abstractions.org  Bindings.org  Client.md  Client.org  ClientImplementation.md  ConfigImplementation.md  ConfigImplementation.org  DesignArchtectureIntro.md  DesignArchtectureIntro.org  DomainNameMappingsImplementation.md  DomainNameMappingsImplementation.org  Implementation.md  Implementation.org  Installation.md  Installation.org  Introduction.org  NAT-Traveral.org  P2P.md  P2P.org  P2PArchitecture.md  P2PArchitecture.org  P2PImplementation.md  PluginImplementation.org  README.md  README.org  ServerArchitecture.md  ServerArchitecture.md.org  ServerImplementation.md.org  Virtualization  docs.org
Docs/diagrams/: P2PRCRemoteNodes.drawio
Docs/haskell/: P2PRC.html  doc-index.html  doc-index.md  index.html  index.md  p2prc.haddock
Simulation/: library.py  requests  setEnv.sh  simulation.py  simulation.sh  test.py
_setup/: doc_setup.tex  macros.tex  packages.tex
abstractions/: base.go  docs.md  init.go
artwork/: README.md  index.html
client/: GroupTrackContainer.go  GroupTrackContainer_test.go  Iptable.go  MAPPort.go  ServerSpecs.go  TrackContainers.go  TrackContianers_test.go  client.go  container.go  docs.md  grouptrackcontainers.json  iptable_test.go  list-servers.go  trackcontainers.json
client/clientIPTable/: AddCustomInformationToIPTable.go  Iptable.go  docs.md  iptable_test.go
client/go/: mDNS.go
client/python/: ipfs_config.py  list-server.py
client/trackcontainers/: grouptrackcontainers.json  trackcontainers.json
cmd/: action.go  docs.md  flags.go
config/: config.go  config_test.go  docs.md
config/generate/: config_test.go  docs.md  generate.go  generateCertificate.go  generateFiles.go  gernerate_test.go  helperFunctions.go
deploy/: README.md  ansible.cfg  packages.yml
deploy/TestAnsible/: description.txt
docs/: Client.md  DesignVIrtualization  Installation.md  Installation.txt  P2P.md  README.md
generate/: generate.go  generate_test.go  modifyGenerate.go  testcaseAST.go
haskell/: .gitignore  README.md  cabal.project  dev_run.sh  p2prc-haskell.cabal  p2prc.cabal
haskell/app/: Main.hs
haskell/lib/: API.hs  CLI.hs  Engine.hs  Environment.hs  Error.hs  JSON.hs  P2PRC.hs  P2Prc.hs
haskell/src/: Main.hs
nix/overlays/: main.nix
nix/templates/haskell/: flake.nix
p2p/: README  docs.md  ip_table.json  iptable.go  iptable_test.go  readiptable.go  readiptable_test.go  speedtest.go  speedtest_test.go  ssh_authorisation.go  ssh_authorisation_test.go  ssh_authrisation_test.go  ssh_autorisation.go  testingMetrics.go  upnp.go  upnp_test.go
p2p/frp/: client.go  docs.md  server.go  server_test.go
p2p/speedtest/: speedtest.go
plugin/: docs.md  generate_test_case.sh  packageManager.go  plugin.go  plugin_test.go
plugin/TestAnsible/: hosts  site.yml
rustlibrary/: gen.go  test_not_rust.go  test_rust.go
rustlibrary/p2prc_rust_module/: Cargo.toml
sample-run/: run.txt
sample-run/ML/: ToolSelection.md  ansible.cfg  hosts.example  packages.yml  requirements.yml
sample-run/ansible-nvidia/: gpus.yml
sample-run/tensorflow/: ansible.cfg  hosts  packages.yml  secrets.example.yml
server/: ReverseProxy.go  container.go  docs.md  gopsutil.go  gpu.go  gpu_test.go  ipfs-ssh.sh  mDNS.go  portforwarding  portforwarding.go  rpc.go  server.go  upload_file.go
server/docker/: Makefile  README  docker.go  docker_test.go  docker_vm.py  docs.md  kill-containers.sh  requirements.txt
server/docker/containers/: README
server/test/: container.go  mDNS.go  portforwarding.go
wasm/: wasm.go
(+46 files in other folders)
