cabal-version:      3.0


--   http://haskell.org/cabal/users-guide/

-- The name of the package.
name:         p2prc


-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: p2prc haskell library

-- A longer description of the package.
description: Implements a client interface to the P2Prc networking runtime

-- The license under which the package is released.
license:            GPL-3.0-only

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             xecarlox94

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         jf94.uk@gmail.com

-- A copyright notice.
-- copyright:
category:           Network
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable p2prc
    -- Import common warning flags.
    import:           warnings

    -- Directories containing source files.
    hs-source-dirs:   src

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    Example

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings

    -- Other library packages from which modules are imported.
    build-depends:      base
                      , p2prc

    -- Base language which the package is written in.
    default-language: GHC2021

library

    import:           warnings

    build-depends:      base
                      , text
                      , aeson
                      , process
                      , bytestring
                      , directory

    hs-source-dirs:   lib

    exposed-modules:  P2Prc

    default-language: GHC2021
